# cheekyutils

./: README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
src/cheekyutils/: __init__.py  __main__.py
